// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of the Option control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-option test-class"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    visible={true}
  >
    <Styled(ButtonToggle)
      bgColorOff="inherit"
      bgColorOn="inherit"
      bottom=""
      className="test-class"
      contentEditable={false}
      direction="right"
      disabled={false}
      errorMessage=""
      fgColorOff="inherit"
      fgColorOn="inherit"
      focus={false}
      height=""
      iconNameOff="square-o"
      iconNameOn="check-square-o"
      id=""
      initialToggle={true}
      innerRef={[Function]}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Option"
      onClick={[Function]}
      optionType={0}
      padding=""
      selected={true}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      testing={true}
      text="test"
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    />
    <Styled(Title)
      layout={6}
      sizing="normal"
      title="test"
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test Option control click event 1`] = `
<Option
  bottom=""
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Option"
  onClick={[MockFunction]}
  optionType={0}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-option"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      visible={true}
    >
      <div
        className="ui-option sc-iwsKbI iJAIoS"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      >
        <Styled(ButtonToggle)
          bgColorOff="inherit"
          bgColorOn="inherit"
          bottom=""
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          errorMessage=""
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          id=""
          initialToggle={false}
          innerRef={[Function]}
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Option"
          onClick={[Function]}
          optionType={0}
          padding=""
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          <ButtonToggle
            bgColorOff="inherit"
            bgColorOn="inherit"
            bottom=""
            className="sc-gZMcBi MLDaV"
            contentEditable={false}
            direction="right"
            disabled={false}
            errorMessage=""
            fgColorOff="inherit"
            fgColorOn="inherit"
            focus={false}
            height=""
            iconName="bomb"
            iconNameOff="square-o"
            iconNameOn="check-square-o"
            iconStyle=""
            id=""
            initialToggle={false}
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Option"
            onClick={[Function]}
            optionType={0}
            padding=""
            selected={false}
            sizing="normal"
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "inherit",
              }
            }
            testing={true}
            text=""
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Button
                bgColorOff="inherit"
                bgColorOn="inherit"
                bottom=""
                className="ui-button-toggle sc-gZMcBi MLDaV"
                contentEditable={false}
                direction="right"
                disabled={false}
                errorMessage=""
                fgColorOff="inherit"
                fgColorOn="inherit"
                focus={false}
                height=""
                iconName="square-o"
                iconNameOff="square-o"
                iconNameOn="check-square-o"
                iconStyle=""
                id=""
                initialToggle={false}
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={true}
                obj="Option"
                onClick={[Function]}
                optionType={0}
                padding=""
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
                testing={true}
                text=""
                theme={null}
                tooltip=""
                top=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button nohover ui-button-toggle sc-gZMcBi MLDaV"
                    disabled={false}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button nohover ui-button-toggle sc-gZMcBi MLDaV sc-EHOje gEttMR"
                      disabled={false}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "backgroundColor": "inherit",
                          "color": "inherit",
                        }
                      }
                    >
                      <Icon
                        bottom=""
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="square-o"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-square-o"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="square-o"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-square-o sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </ThemeProvider>
          </ButtonToggle>
        </Styled(ButtonToggle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Option>
`;

exports[`Test disabling of the Option control 1`] = `
<Option
  bottom=""
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Option"
  onClick={[MockFunction]}
  optionType={0}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-option"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      visible={true}
    >
      <div
        className="ui-option sc-iwsKbI jCaEow"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      >
        <Styled(ButtonToggle)
          bgColorOff="inherit"
          bgColorOn="inherit"
          bottom=""
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          errorMessage=""
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          id=""
          initialToggle={false}
          innerRef={[Function]}
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Option"
          onClick={[Function]}
          optionType={0}
          padding=""
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          <ButtonToggle
            bgColorOff="inherit"
            bgColorOn="inherit"
            bottom=""
            className="sc-gZMcBi MLDaV"
            contentEditable={false}
            direction="right"
            disabled={true}
            errorMessage=""
            fgColorOff="inherit"
            fgColorOn="inherit"
            focus={false}
            height=""
            iconName="bomb"
            iconNameOff="square-o"
            iconNameOn="check-square-o"
            iconStyle=""
            id=""
            initialToggle={false}
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Option"
            onClick={[Function]}
            optionType={0}
            padding=""
            selected={false}
            sizing="normal"
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "inherit",
              }
            }
            testing={true}
            text=""
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Button
                bgColorOff="inherit"
                bgColorOn="inherit"
                bottom=""
                className="ui-button-toggle sc-gZMcBi MLDaV"
                contentEditable={false}
                direction="right"
                disabled={true}
                errorMessage=""
                fgColorOff="inherit"
                fgColorOn="inherit"
                focus={false}
                height=""
                iconName="square-o"
                iconNameOff="square-o"
                iconNameOn="check-square-o"
                iconStyle=""
                id=""
                initialToggle={false}
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={true}
                obj="Option"
                onClick={[Function]}
                optionType={0}
                padding=""
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
                testing={true}
                text=""
                theme={null}
                tooltip=""
                top=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button nohover ui-button-toggle sc-gZMcBi MLDaV"
                    disabled={true}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button nohover ui-button-toggle sc-gZMcBi MLDaV sc-EHOje kiuasi"
                      disabled={true}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "backgroundColor": "inherit",
                          "color": "inherit",
                        }
                      }
                    >
                      <Icon
                        bottom=""
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="square-o"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-square-o"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="square-o"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-square-o sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </ThemeProvider>
          </ButtonToggle>
        </Styled(ButtonToggle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Option>
`;

exports[`Test making the Option control invisible 1`] = `
<Option
  bottom=""
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Option"
  onClick={[MockFunction]}
  optionType={0}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-option"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      visible={false}
    >
      <div
        className="ui-option sc-iwsKbI iGpfkF"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      >
        <Styled(ButtonToggle)
          bgColorOff="inherit"
          bgColorOn="inherit"
          bottom=""
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          errorMessage=""
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          id=""
          initialToggle={false}
          innerRef={[Function]}
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Option"
          onClick={[Function]}
          optionType={0}
          padding=""
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={null}
          tooltip=""
          top=""
          visible={false}
          width=""
          xcss={null}
        >
          <ButtonToggle
            bgColorOff="inherit"
            bgColorOn="inherit"
            bottom=""
            className="sc-gZMcBi MLDaV"
            contentEditable={false}
            direction="right"
            disabled={false}
            errorMessage=""
            fgColorOff="inherit"
            fgColorOn="inherit"
            focus={false}
            height=""
            iconName="bomb"
            iconNameOff="square-o"
            iconNameOn="check-square-o"
            iconStyle=""
            id=""
            initialToggle={false}
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Option"
            onClick={[Function]}
            optionType={0}
            padding=""
            selected={false}
            sizing="normal"
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "inherit",
              }
            }
            testing={true}
            text=""
            theme={null}
            tooltip=""
            top=""
            visible={false}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Button
                bgColorOff="inherit"
                bgColorOn="inherit"
                bottom=""
                className="ui-button-toggle sc-gZMcBi MLDaV"
                contentEditable={false}
                direction="right"
                disabled={false}
                errorMessage=""
                fgColorOff="inherit"
                fgColorOn="inherit"
                focus={false}
                height=""
                iconName="square-o"
                iconNameOff="square-o"
                iconNameOn="check-square-o"
                iconStyle=""
                id=""
                initialToggle={false}
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={true}
                obj="Option"
                onClick={[Function]}
                optionType={0}
                padding=""
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
                testing={true}
                text=""
                theme={null}
                tooltip=""
                top=""
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button nohover ui-button-toggle sc-gZMcBi MLDaV"
                    disabled={false}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                      }
                    }
                    visible={false}
                  >
                    <div
                      className="ui-button nohover ui-button-toggle sc-gZMcBi MLDaV sc-EHOje dsqkWk"
                      disabled={false}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "backgroundColor": "inherit",
                          "color": "inherit",
                        }
                      }
                    >
                      <Icon
                        bottom=""
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="square-o"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-square-o"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="square-o"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-square-o sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </ThemeProvider>
          </ButtonToggle>
        </Styled(ButtonToggle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Option>
`;

exports[`Test retrieval of Option props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Option",
  "onClick": [Function],
  "optionType": 0,
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "text": "",
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
